Fix syntax for ingress configuration

--- a/cluster/apps/flux-system/weave/weave-gitops-dashboard.yaml
+++ b/cluster/apps/flux-system/weave/weave-gitops-dashboard.yaml
@@ -26,10 +26,10 @@ spec:
         hajimari.io/appName: "argocd"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
       hosts:
-        - "weave.${SECRET_DOMAIN}"
-      paths:
-        - /
-      pathType: Prefix
+        - host: "weave.${SECRET_DOMAIN}"
+          paths:
+            - /
+          pathType: Prefix
       tls:
         - hosts:
             - "weave.${SECRET_DOMAIN}"
