--- a/cluster/apps/flux-system/weave/weave-gitops-dashboard.yaml
+++ b/cluster/apps/flux-system/weave/weave-gitops-dashboard.yaml
@@ -23,7 +23,7 @@ spec:
         cert-manager.io/cluster-issuer: "letsencrypt-production"        
         hajimari.io/enable: "true"
         hajimari.io/icon: "chart-sankey-variant"
-        hajimari.io/appName: "argocd"
+        hajimari.io/appName: "weave"
         traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
       hosts:
         - host: "weave.${SECRET_DOMAIN}"
