Fix secret name

--- a/cluster/apps/flux-system/weave/weave-secrets.sops.yaml
+++ b/cluster/apps/flux-system/weave/weave-secrets.sops.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: weave-secrets
+    name: cluster-user-auth
     namespace: flux-system
 stringData:
     password: ENC[AES256_GCM,data:Yqoll3qDP0Si2Iw9KoLJdnmCOuWNFsf7wW48FhvCE/I=,iv:iJVjBbbB1NnI9IuGxNAUkq0+Clcn0e9SnUPf/hfBM8A=,tag:/YMABxraUSXoUBDT49+abg==,type:str]
