Set correct name for secret

--- a/cluster/apps/flux-system/weave/weave-secrets.sops.yaml
+++ b/cluster/apps/flux-system/weave/weave-secrets.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:Yqoll3qDP0Si2Iw9KoLJdnmCOuWNFsf7wW48FhvCE/I=,iv:iJVjBbbB1NnI9IuGxNAUkq0+Clcn0e9SnUPf/hfBM8A=,tag:/YMABxraUSXoUBDT49+abg==,type:str]
-    username: ENC[AES256_GCM,data:OBEuPIw=,iv:+izRio10XoONJfV1tRxJcGx/c/8/6KkykZONQCz+2Oc=,tag:ncN7XIsFKp63i/rf9uy38A==,type:str]
+    password: ENC[AES256_GCM,data:s0wlddQ2/TCmqQTT/KXofqZYUtweRQFL2ccFpHPynfo=,iv:jZbPzz3BpINtjccntYVpjpElN3d3ZM3LZIhua1Uu7I4=,tag:X9WP207n6dWh0wL2PR8tjg==,type:str]
+    username: ENC[AES256_GCM,data:D7gj+Pk=,iv:mdMEaJ9CbPMWseEld+uVfxd3YpPe6Uha2YrwQZBhNGs=,tag:6VLhDgd92sidqjBxY4jk7Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMZHpSbXFqRzhUVWJISFp1
-            Q1lPczVDbXJ6cEZmTGIzNjRERll6NnRWcVhNCjBnZHh3YVZqeThxSnhMOHFXdXlX
-            dUdzTHhkSERMOEdKRXNxMk96aTBjQ2MKLS0tIHlSNjBUOFNhWjhUYUl0c3ZwYXhs
-            M05Xd0JSZ3QzMXljOGZoWFZlSlp6S3cK/6VrR2cfwRwucjgYwCtXJMytCEKuyYHx
-            dPe3tIAf5A/Ezi5/JphNZj9V039YXuudIhzczv6dtYNznUylsuJVhw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTMnM3L2k4cjNKVHBidGQw
+            NFdEY2IzN3pwajVMNU1nRm5mQVF3cEl1dUJZCld0bzV1WmFpakl6RjFTU2RnVmth
+            OG1UWkJPMFFydE1abmt6TVlCSWZCWEUKLS0tIENIamFDbXNjSDRVN2JUNUxrWExL
+            QUhUV1RaUVd0Q1ZkdEFBREJIUkQ2cVUKAtcwq+2vxaD6KOn3vENeX7Q2O9T8/78f
+            tmRm3bsEQUtK6oHlqWMO6bRWgzOxSU4ZmSNK+7dFEXfQPbdBsbevXg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-30T09:36:57Z"
-    mac: ENC[AES256_GCM,data:5F80AM14CdFIoRJa+XyG0tikYzqbsbxSdhk97uVN0PfosJbKmA6hYRYLG1UdUzJNkHGM2/WAMGM8lo85dgGEe+ofb8I2pGGrxBn9emmDJWcStzLs0yIFjBaCYTjQ04cJGppgEyfi6zM9fWtZdl/NcawkYb8pFhNPjNDDstnbCX8=,iv:cUb/qdRV0VxgrSqNQK/rBajsHxVKicK+h/ZV0O+3bHQ=,tag:Bx2xU+Bd5i/eL5nxxb5K5g==,type:str]
+    lastmodified: "2023-01-30T10:10:37Z"
+    mac: ENC[AES256_GCM,data:oJ0ldcR11awwP6vEbl7ge67jfg9egpLdkGbKZBkn7YVgn85n2I2d/fBazCHruVOTGyYCYx9tF7WgtTPHDUuaPKXkForYb+uidTAQGfSirTr9KZUbAO0532sBz8jGCFTfWZgdt4fD1v/VEHtaAJ6m2uUNoE9BPJkLeo2hyQcqMHM=,iv:eCid0KOupWgkBmWcB5/k8kS5aKIZSIcOo7GyE97MAvM=,tag:Mk20o/oHWFAHbVgYm/EZfA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
