Use bcrypt has for password string

--- a/cluster/apps/flux-system/weave/weave-secrets.sops.yaml
+++ b/cluster/apps/flux-system/weave/weave-secrets.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:s0wlddQ2/TCmqQTT/KXofqZYUtweRQFL2ccFpHPynfo=,iv:jZbPzz3BpINtjccntYVpjpElN3d3ZM3LZIhua1Uu7I4=,tag:X9WP207n6dWh0wL2PR8tjg==,type:str]
-    username: ENC[AES256_GCM,data:D7gj+Pk=,iv:mdMEaJ9CbPMWseEld+uVfxd3YpPe6Uha2YrwQZBhNGs=,tag:6VLhDgd92sidqjBxY4jk7Q==,type:str]
+    password: ENC[AES256_GCM,data:OIbgBOwJ53hdYCJ5umEoDykLwOAo+1403R0P0E7sod1NaeFx9/3gHxtZ+y2bilCeuHkVvaaIu9hw7Gk7,iv:PTKTSCVCno3ZZcw5M+LG3Cyiex8vEvTOpoAyTO3RLN4=,tag:55/PuW6IdU5Vo63vQRglAA==,type:str]
+    username: ENC[AES256_GCM,data:rG3EmvU=,iv:AW2OyIJnjRpZD0FZLc0q0WaPW2AcBiU1XInrku2i76Q=,tag:gaWXYaiC0cqp9rVBCRzkzQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTMnM3L2k4cjNKVHBidGQw
-            NFdEY2IzN3pwajVMNU1nRm5mQVF3cEl1dUJZCld0bzV1WmFpakl6RjFTU2RnVmth
-            OG1UWkJPMFFydE1abmt6TVlCSWZCWEUKLS0tIENIamFDbXNjSDRVN2JUNUxrWExL
-            QUhUV1RaUVd0Q1ZkdEFBREJIUkQ2cVUKAtcwq+2vxaD6KOn3vENeX7Q2O9T8/78f
-            tmRm3bsEQUtK6oHlqWMO6bRWgzOxSU4ZmSNK+7dFEXfQPbdBsbevXg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3aDhMR1Y4Tm43RHpsVTFq
+            UjF1aThlYlpZN1VHVUl1TkJvZ3dpMVBMUERBCmRKclE3aDRkaHYxSkd5aTJuMnZF
+            cnI2TlVRM1EzTWxGY2ZmalVVNDBkSEkKLS0tIEFwY2pMMjlmVHBUSXZrVEZ0c1V5
+            VC9KYXJaMkRHUS80UHhFRk92QURJc2sK5MH9jCieNPIg0UEFeXZN+PYaFktgYo+/
+            hKi+DHDwsbBwMQRgWVKeLBml0+4X1TifpWJ1jS/RcAWA+p5lJmgUKA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-30T10:10:37Z"
-    mac: ENC[AES256_GCM,data:oJ0ldcR11awwP6vEbl7ge67jfg9egpLdkGbKZBkn7YVgn85n2I2d/fBazCHruVOTGyYCYx9tF7WgtTPHDUuaPKXkForYb+uidTAQGfSirTr9KZUbAO0532sBz8jGCFTfWZgdt4fD1v/VEHtaAJ6m2uUNoE9BPJkLeo2hyQcqMHM=,iv:eCid0KOupWgkBmWcB5/k8kS5aKIZSIcOo7GyE97MAvM=,tag:Mk20o/oHWFAHbVgYm/EZfA==,type:str]
+    lastmodified: "2023-01-30T10:16:52Z"
+    mac: ENC[AES256_GCM,data:8liP0tGC1Qt54k6TxwxXAykCflU4VbeuptFJdApDyJTUgw2VYwalr7aUv96pu6TOHOYI68VSqNYrnHn9g9WER+eTX9MPZX8IZNqRyLETf7z+7F0QvSu9ooExjquP0jyhF1oe797FJ1mcX/53gc0lTOox/qn3asWhhdkmhhq30eQ=,iv:jK0GteDFUpL1Yfk/SjAHdGb0OGg2Qo9hPnb+9MUfLrs=,tag:w+rsxZPMkoH1rajggUPLRw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
