--- a/cluster/apps/flux-system/weave/weave-gitops-dashboard.yaml
+++ b/cluster/apps/flux-system/weave/weave-gitops-dashboard.yaml
@@ -16,6 +16,12 @@ spec:
         name: ww-gitops
   interval: 1h0m0s
   values:
+    rbac:
+      create: true
+      additionalRules:
+      - apiGroups: ["*"]
+        resources: ["*"]
+        verbs: ["*"]
     ingress:
       enabled: true
       className: "traefik"
