--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       # renovate: registryUrl=https://grafana.github.io/helm-charts
       chart: grafana
-      version: 6.17.8
+      version: 6.50.6
       sourceRef:
         kind: HelmRepository
         name: grafana-charts
@@ -22,7 +22,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/grafana
-      tag: 8.2.5
+      #tag: 8.2.5
       pullPolicy: IfNotPresent      
     deploymentStrategy:
       type: Recreate
