--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -21,8 +21,7 @@ spec:
       namespace: nfs-system
   values:
     image:
-      repository: ghcr.io/k8s-at-home/grafana
-      #tag: 8.2.5
+      repository: grafana/grafana
       pullPolicy: IfNotPresent      
     deploymentStrategy:
       type: Recreate
