--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       # renovate: registryUrl=https://hajimari.io
       chart: hajimari
-      version: 1.2.0
+      version: 2.0.2
       sourceRef:
         kind: HelmRepository
         name: hajimari-charts
@@ -22,7 +22,7 @@ spec:
   values:
     image:
       repository: ghcr.io/toboshii/hajimari
-      tag: v0.2.0
+      #tag: v0.2.0
     hajimari:
       defaultEnable: false
       namespaceSelector:
@@ -31,6 +31,7 @@ spec:
           - networking
           - monitoring
           - argocd
+          - flux-system
       name: "you"
       customApps: []
       groups:
