--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -23,6 +23,8 @@ spec:
     image:
       repository: ghcr.io/toboshii/hajimari
       #tag: v0.2.0
+    env:
+      TZ: Europe/Berlin
     hajimari:
       defaultEnable: false
       namespaceSelector:
@@ -32,17 +34,18 @@ spec:
           - monitoring
           - argocd
           - flux-system
+      title: Start
       name: "you"
       customApps: []
-      groups:
-        - name: Tech
-          links:
-            - name: Hacker News
-              url: "https://news.ycombinator.com/"
-            - name: The Verge
-              url: "https://theverge.com/"
-            - name: MIT Technology Review
-              url: "https://www.technologyreview.com/"
+      globalBookmarks:
+        group: Tech
+        bookmarks:
+          - name: Hacker News
+            url: "https://news.ycombinator.com/"
+          - name: The Verge
+            url: "https://theverge.com/"
+          - name: MIT Technology Review
+            url: "https://www.technologyreview.com/"
     ingress:
       main:
         enabled: true
