--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -17,6 +17,8 @@ spec:
         namespace: flux-system
   values:
     prometheus:
+      serviceAccount: prometheus-prometheus
+      namespace: monitoring
       serviceMonitor:
         enabled: true
       prometheusRule:
