--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -10,18 +10,15 @@ spec:
     spec:
       # renovate: registryUrl=https://metallb.github.io/metallb
       chart: metallb
-      version: 0.13.7
+      version: 0.12.1
       sourceRef:
         kind: HelmRepository
         name: metallb-charts
         namespace: flux-system
   values:
-    prometheus:
-      serviceAccount: prometheus-prometheus
-      namespace: monitoring
-      serviceMonitor:
-        enabled: true
-      prometheusRule:
-        enabled: true
-    crds:
-      enabled: false
+    configInline:
+      address-pools:
+        - name: default
+          protocol: layer2
+          addresses:
+            - "${METALLB_LB_RANGE}"
