--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
       interval: 5m
   values:
     image:
-      repository: homeassistant/home-assistant
+      repository: ghcr.io/home-assistant/home-assistant
       tag: 2023.2.0
     env:
       TZ: "Europe/Berlin"
