Fix namespace for firefly secret

--- a/cluster/apps/firefly/firefly-iii/firefly-iii-secrets.sops.yaml
+++ b/cluster/apps/firefly/firefly-iii/firefly-iii-secrets.sops.yaml
@@ -2,22 +2,22 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: firefly-iii-secrets
-    namespace: default
+    namespace: firefly
 stringData:
-    DB_PASSWORD: ENC[AES256_GCM,data:1SXZ86RCaGqBO4wWhBgd4bivLIuR4tDUhtbHmHBYqhE=,iv:4XfAmOoIbdAS4eFlMSufmXYh1LXxVcxRYl/FbRS45fI=,tag:g+5KHiL4ri8djuqFOEJOMw==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:toAnHTgwkI/iuofjfLFb+uNVxXmG64ZMgcymK22OBkw=,iv:8x8bH1BuX5y9/ni9cDHTLzX9i2debr4vjJu4iYDmW38=,tag:iJqdHdo5vpW0JYrYU/KlzA==,type:str]
-    PGPASSWORD: ENC[AES256_GCM,data:EgXh8/h1cnd0EmE1R7y7z6g4MvCyuD9mU7dLXjdgh6s=,iv:9WaMUFVfbVrJ1bFtI1OQL9yDnPb/CgJ+b/b+CznbsMc=,tag:onhg6LX0ojhBS6vw4XNTiw==,type:str]
-    APP_KEY: ENC[AES256_GCM,data:l7xXd2QHCruOHqGxZTs8NS/9JH8cOerAWj+FTGyZBtE=,iv:XqURND1ScHQ5WCmiUIvf4LDtme5+cZmaz8wrqarlrP4=,tag:VLdB22jtNKwJTbTQTDN8lQ==,type:str]
-    SITE_OWNER: ENC[AES256_GCM,data:9KR+CrggAIdSRKeMbFEbV4uUicZU0bOfmHdI6XQ=,iv:o4BKLWZ1SrMSBSdMgNrOEnBh1rba26N3hhmUrYO7QXs=,tag:oTlvz0QgwYNina5OXgID6Q==,type:str]
+    DB_PASSWORD: ENC[AES256_GCM,data:iPmP41ZyvwPHKnZ/02letRgS72p6EyDPdwqfv13YUdQ=,iv:jntx7gGyZp4DcaovinsHmLoKvDwPYpMBIaWrsUvw7GA=,tag:4eYUt9dwsjn6hMm8h6Peaw==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:k+v9CIgZAuChwxKONNQ3142oVov6KyLsTz0RRsaftQ8=,iv:lFE5U9y7cr5JS5Y+rduAghNv1oxMX7l3tU0RhbSTYkg=,tag:TiZjCKHx4RHAkrAdGhTByg==,type:str]
+    PGPASSWORD: ENC[AES256_GCM,data:TMopTI7CLS5ireh+kauKrw6Jm/vyyqGvsOI9byQSyhw=,iv:hz959LHvg1UJdo+ihfgqB2ddlFN+Ixjgwh44prFeqXY=,tag:RFE+JzSepobKBBAUUXuMwQ==,type:str]
+    APP_KEY: ENC[AES256_GCM,data:/8ZFXOg/WznkOb5L44ulmZc8xLpRYH0EniVsEReFniU=,iv:7K3rShxPtdkxZv7t0FpRaxe1JqMiiI5Z19kulfQz+TQ=,tag:dBN9RRsr0ZsP84RM84xHZQ==,type:str]
+    SITE_OWNER: ENC[AES256_GCM,data:x573iEWu5FvPAEMl86/s5dfeFLTuIHq26c0W0C0=,iv:1N/164Lnp4MNAJC4y9+PTRWpTY3UtXhkc+Yfq7mmy6w=,tag:77ebscKLkVk7CBEd0RjsiA==,type:str]
     RESTORE_URL: ""
     BACKUP_URL: ""
-    DBHOST: ENC[AES256_GCM,data:S1bxfEayHDkQBo19/QBLlS2b,iv:w8FtLnz12C+cUony7OVCO7MuHQPgE71BekH3eSJdA9k=,tag:A5Rsl5cMUh2gdUUHe2jHSg==,type:str]
-    DBPORT: ENC[AES256_GCM,data:KIm6yg==,iv:IAK+uJLtWRdh7OIAAUufiMmXjcz2LYzMzuvmbBrr3LE=,tag:ebTN5E4THn6vGurebn3eBw==,type:str]
-    DBNAME: ENC[AES256_GCM,data:j81U1xF/jg==,iv:cYJi0pnL3fX2ybBhwlw3B/qXIRHzJioGZKHFE8p50dY=,tag:X0vJMWT42OlrwofUmT8GfQ==,type:str]
-    DBUSER: ENC[AES256_GCM,data:rj1uAKCyRQ==,iv:Mzer7fxmV189mg5LT38jtjW8ZKB5HvLX/e7ozUqe9OE=,tag:59mOJdp9iCIS6ti0Qlp79w==,type:str]
-    TZ: ENC[AES256_GCM,data:jOU2gFkmyL8XItD8lA==,iv:KuAcpVUM0x1SdWUAszyi3C70a+Hsiud1PoXW6eeawIc=,tag:de9mvA+XoXwm+lOnBBQ+sA==,type:str]
-    POSTGRES_HOST_AUTH_METHOD: ENC[AES256_GCM,data:dqliQLs=,iv:LLaq+BJjmqTXzVK8Jiyq44I4N5VQEwXRIlwZimChF40=,tag:Hps6uwBdKDaQjcKu6m54NQ==,type:str]
-    POSTGRES_USER: ENC[AES256_GCM,data:OPZMFIdRCQ==,iv:s4G7Ia3mFefU8souTxcbLPy5CPA+TdF6oNWZ5FNOcvo=,tag:gVIXtc7C86hbyXtx8PumNA==,type:str]
+    DBHOST: ENC[AES256_GCM,data:tKok1hGUqeKNVB3stadBLGfh,iv:HvZ+QZV3zNM9KwP4L+x24ySbOa6iSB9b3edA+iwmrJY=,tag:lIpF18QIBRPkjwlq/jxKLw==,type:str]
+    DBPORT: ENC[AES256_GCM,data:53JBTQ==,iv:hwWyWhp+Uy0lKU76zCq5bUVxPlSSjZZbB1MIzicQKvo=,tag:1S4lGnNb3FqLHGk70Exapg==,type:str]
+    DBNAME: ENC[AES256_GCM,data:K2HZ8nOfMQ==,iv:Ji5/tEBKcqplMPk1MzNHV6QlMnUYoPDOFGtpgeIkqMc=,tag:H4yeesmpN2Ffs+D8mjxkyg==,type:str]
+    DBUSER: ENC[AES256_GCM,data:lJXDGFtRsw==,iv:keP4II64Ehpi/K7r4/AUninNqouQOEsDBT2LFHHYG2Y=,tag:NM/8YBMQR//bSDrdInZlQQ==,type:str]
+    TZ: ENC[AES256_GCM,data:d5tPCQZW+/zIkSfM0g==,iv:9GoUKGnfyptCKw9otiEnJE2Y57B+yJxsJPR/RRrkP/M=,tag:6MfZBgwuje3re4Ycynt5MA==,type:str]
+    POSTGRES_HOST_AUTH_METHOD: ENC[AES256_GCM,data:+xfnwvQ=,iv:+F03np4H7NxOzuQ2LknJ91YGBnK/l31PjXty4IiJ8kg=,tag:9Yi7AVcbp/wFAp1DB9IyNQ==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:c4DvPuq/jA==,iv:NUogfEFrs1r3T0vWn6N0wSJMeWvKhmXFGYBAgcVWhcE=,tag:gcEj6WK9FkE5sHuSwBHamA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -27,14 +27,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2cFZoWm1YenAwU2FPRkIy
-            RmV0Rkl2V3djTUM1d0YwdFNNTjJMMkNhMmw4CnB6TWFPRGZQNktLUTVsbnBKLzRi
-            SGN4YVFSc1Bnb0g2RVVaby9oRlNlVVkKLS0tIGFGb0tObkxrYlE2OHJMb090SHRR
-            Vnc5SUtHREhGU3AvSGluNXR4cFh1TFkKfFuobUuXSHYgV/Q74mxCPucnhjDgn9dk
-            T0c1+1E+0LMY6FsbzPJt3TZlBpMMozp5u6X7YMHUFb+gAhee4PYS4g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxNzM0Rm5vQkgxdU9kQ3RL
+            b211WE0yaml1VW5uK3BvZmt3UVdHeTQyeVVNClArR25QZjZ5dWZZbFFUR0RueXhi
+            VDRka2VISytsUGZKdlZPaWJaRVlDb3MKLS0tIFNYTVZTTGpENGJ1b0lYYk14bFcx
+            MC91MkxDcVVjazVwcDZGTWpuSFVRQUUKBOCmc/a8Af0lVbeDAugSAsrdZKvbNuXS
+            Dh+PSuXJpE5tya+lVV7OE2OBn2jKCwmvMQhFzknvkwScztIIJ59eaw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-09-19T12:45:40Z"
-    mac: ENC[AES256_GCM,data:WP0J2ffscLZOSqYv41KBOxNDXvt6j5xQ4mJDKCEQUWOgD21x+shVC7iL1qRxBz8nGFJWnzfvFOKzhR7AeSHzkWTcz67f3QcwuxPpBdXcUgRpMLRVKW3lBqy2HSo/wGUaQiX8SadiKpQpp9V2CoMMZubn79QFyLiBvLWPjxwzXD4=,iv:+sFf9ySvhBuley6+tnfqBPgbirsFPBatoTd1J5/74ug=,tag:fn/S0LN4P9teFpoaqKUe+A==,type:str]
+    lastmodified: "2023-02-03T15:58:18Z"
+    mac: ENC[AES256_GCM,data:o2lgCQvCm+wtaQC7tLAYEIJMb0lGffOIIO7FpsMDutqz0P+hfUP8041q5DUn6tPQK2/b9KIu3/0b2o9B2JUSywDSmkH4HEDJ9WaWkuaZsKxhk/EmTfsdWJBiA3A2Fa+vlY33AIcsjiL7EFgcL7adQGXemeUGCbRrrJeGR9YiA48=,iv:wyfBRakLK/0+l3lvtD9dG0xbWN4lejgvnU3Jov9l9ZE=,tag:uMdPfKVa9qOMTQVai4D4VQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
+    version: 3.7.3
