--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -34,6 +34,7 @@ spec:
           - monitoring
           - argocd
           - flux-system
+          - miniflux
       title: Start
       name: "you"
       customApps:
