--- a/cluster/apps/miniflux/kustomization.yaml
+++ b/cluster/apps/miniflux/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - serviceaccount.yaml
   - sts-postgresql.yaml
   - deployment.yaml
-  - service.yaml
+  - service-db.yaml
   - service-app.yaml
   - ingressroute.yaml
