Fix wrong pvc name

--- a/cluster/apps/miniflux/sts-postgresql.yaml
+++ b/cluster/apps/miniflux/sts-postgresql.yaml
@@ -70,7 +70,7 @@ spec:
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: "/data/"
-          name: data
+          name: miniflux-db
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       serviceAccount: miniflux
