--- a/cluster/apps/miniflux/kustomization.yaml
+++ b/cluster/apps/miniflux/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - miniflux-secrets.sops.yaml
   - serviceaccount.yaml
   - sts-postgresql.yaml
   - service-db.yaml
