--- a/cluster/apps/miniflux/miniflux-secrets.sops.yaml
+++ b/cluster/apps/miniflux/miniflux-secrets.sops.yaml
@@ -5,8 +5,9 @@ metadata:
     name: miniflux-secrets
     namespace: miniflux
 stringData:
-    username: ENC[AES256_GCM,data:LIlS+Ra4NR3UPdjXSA==,iv:fNZm9gYqJiGikOhug647DMb+E8IZvpioy/iO0QfBEIM=,tag:gqE4SFsZDG1nlVxPpckedA==,type:str]
-    password: ENC[AES256_GCM,data:IEuAKv6HYH/O4Rp5qBf/6KlRUMf1os9v,iv:6etJAPAgrYd+RVIUIACIBwNO/wKCdSglRGDslMeGAKs=,tag:Hq1sQumQKcvDFFhyLRAqNw==,type:str]
+    username: ENC[AES256_GCM,data:KrWSJ6HJSMegaDMHHg==,iv:V/eOiuBwyVI2N4Xjzd36Yk8oCxtAJFfwxgovCQdrhko=,tag:klqOhOD5xqa2qySZliwOEg==,type:str]
+    password: ENC[AES256_GCM,data:bmOgbIMrBp1WovMGV92XQPBTn8PngPZ/,iv:8qGHhyygp8iIVRcpEAAx8/UW2bqNL9ntOZjQeIw8Eew=,tag:+6lUnqqzlwxst6qgVk4/hQ==,type:str]
+    base_url: ENC[AES256_GCM,data:5cRVlNaxJRCerGUm2Vg3CQ==,iv:8So9OVylHv0mMtyyl2mEPKeNu3i0t6UCVFTwMnVKZxo=,tag:HhV3+NwPh7O6XPUMVqS82A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +17,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHNEhxUzhUWEplWDdISG1Q
-            dzNFSWJhWmYybWdoVERQV2FUcmEvekZKeERNCkpCWU4vZGJlSXNWUWUzQ3NQdDhG
-            eStDdDBieklwS2piWHdoU1gvS2lEZjgKLS0tIGVkNmYrVE9yeU0yd1U5M1Y0bEph
-            STlkTlJkTWJJc1lkV3g4dTg1cDRnNWcKqyPUyNgOL8lp4E6VEDXB7PZoUUSU8Gi2
-            AYkO8y1cXEDkTHy2epCiYGM3d0QDqAenFEUkoJUjkYaz7tt7XBtI5g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiT2R2L0NZakVUQWRQYU1D
+            M2lXcUhKdGg1bnRnbjYvUXFzL1YzUy9KYVFVClhzVktqNDVIUDcvZGlRQkF6NUwy
+            ZDdUUlowKzE1aDVLd09nQ3dqOWd2VkEKLS0tIFRFQzBsclNRenU1NW9Ub0JyTjBl
+            NjUxMnRXbnBnOW41d0kzQmRzM1VDdGMKpNmNjiYlnIYoPfrM/NEhutRs4+zUxFRO
+            9qcFFywuENQDvwedfSIFRLotFwpre+ciASdGzogSwJEmWhzehJXsGg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T14:34:03Z"
-    mac: ENC[AES256_GCM,data:zhr4PtFMxFR6VjsRuGaKLyX3s0bZ/C1XOcuN24WNd+NTnelttGZ3zlQ7grHUvYpQpC/6Hl0C507HZJnjl2g5VYo6mf/x9fnhjvnzi9dxM+mL9HDbYxPpaGfT49J/cXVKhTPmH/x0W5H3Erkce0dFDM/NtWRSv+tFiSni74JzPGE=,iv:tVi8kS2DAVCXGgRm1FKdSD3fKAubmY9mpq5shwLWu78=,tag:LGy48lHUPARhJCOQfG7hjQ==,type:str]
+    lastmodified: "2023-02-13T14:41:19Z"
+    mac: ENC[AES256_GCM,data:6hcVDYRs3XaKo4b53HxvCYfm8nyLtanINkbyMs0Mxg1c+SOXoB2TTofLLoybDWNBTGrxbLjC2FOZIxr8cFe6v8Ry3FvGK1scbDAtQKf3SvAcGRr7nmw+EhpP9nL+1vwci7Imx+tjTlr1WSHDX3oKDQ4NEd4mQoL48Cte8FPW9wk=,iv:8R8EgnMKcWdTfO5biOdDksCuYm6wttx7/egQvVpJ7Dw=,tag:vc5ivbRcxeGOYneUWGHbwQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
