Adjust secret value

--- a/cluster/apps/miniflux/miniflux-secrets.sops.yaml
+++ b/cluster/apps/miniflux/miniflux-secrets.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     name: miniflux-secrets
     namespace: miniflux
 stringData:
-    username: ENC[AES256_GCM,data:KrWSJ6HJSMegaDMHHg==,iv:V/eOiuBwyVI2N4Xjzd36Yk8oCxtAJFfwxgovCQdrhko=,tag:klqOhOD5xqa2qySZliwOEg==,type:str]
-    password: ENC[AES256_GCM,data:bmOgbIMrBp1WovMGV92XQPBTn8PngPZ/,iv:8qGHhyygp8iIVRcpEAAx8/UW2bqNL9ntOZjQeIw8Eew=,tag:+6lUnqqzlwxst6qgVk4/hQ==,type:str]
-    base_url: ENC[AES256_GCM,data:5cRVlNaxJRCerGUm2Vg3CQ==,iv:8So9OVylHv0mMtyyl2mEPKeNu3i0t6UCVFTwMnVKZxo=,tag:HhV3+NwPh7O6XPUMVqS82A==,type:str]
+    username: ENC[AES256_GCM,data:W8F4GZhZEm8MEHJvvQ==,iv:pYsqcBGoxZcJZAkAN4oJvxy6fqZ5X4ENgtlrAPneYVU=,tag:nvQlEx4kWf+MPpu6y0sVNg==,type:str]
+    password: ENC[AES256_GCM,data:3pO4qpivIHCUXTEReGjFzZ0F7S/yJxYH,iv:6AcPxFhFt3H0dGjGokp2GaZ3SlgO/4YtCqdSkkDfSq8=,tag:Uzh6cT+eBSUkIojm8GVZkg==,type:str]
+    base_url: ENC[AES256_GCM,data:vx56fRnY7LQqsHQNw3qsTGajFl4iwSst,iv:J0wgwNcGl31AKovR6ORV3Kx1uxSNQvCe48Z76tEVZHQ=,tag:vtJoogRLUXA0lVAmM/i98w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiT2R2L0NZakVUQWRQYU1D
-            M2lXcUhKdGg1bnRnbjYvUXFzL1YzUy9KYVFVClhzVktqNDVIUDcvZGlRQkF6NUwy
-            ZDdUUlowKzE1aDVLd09nQ3dqOWd2VkEKLS0tIFRFQzBsclNRenU1NW9Ub0JyTjBl
-            NjUxMnRXbnBnOW41d0kzQmRzM1VDdGMKpNmNjiYlnIYoPfrM/NEhutRs4+zUxFRO
-            9qcFFywuENQDvwedfSIFRLotFwpre+ciASdGzogSwJEmWhzehJXsGg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1NmRxOE5TMTNMb056VmJh
+            dXN1SmtucllnVk03TCsreEhQaVMwRVVIQXljCllySkRYVU9LWmRhMENRd2IwWmpX
+            WnhFQzFQRkZ1dzhBWjhyTU1XMmNwaVUKLS0tIE1TRU5aWU9hY0JsRCtjTUJRVkcv
+            cWF3VEdCQmZYcTVjTENtdlRkT3ROcTgKMIATp/ExN8iAgGBcq6Sz87tJhAgVFRD5
+            asflVlXlrwVj2fjGSmxN4bHxhRCmKqGQD+NTeUDmeIPRWgJWmim2XA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T14:41:19Z"
-    mac: ENC[AES256_GCM,data:6hcVDYRs3XaKo4b53HxvCYfm8nyLtanINkbyMs0Mxg1c+SOXoB2TTofLLoybDWNBTGrxbLjC2FOZIxr8cFe6v8Ry3FvGK1scbDAtQKf3SvAcGRr7nmw+EhpP9nL+1vwci7Imx+tjTlr1WSHDX3oKDQ4NEd4mQoL48Cte8FPW9wk=,iv:8R8EgnMKcWdTfO5biOdDksCuYm6wttx7/egQvVpJ7Dw=,tag:vc5ivbRcxeGOYneUWGHbwQ==,type:str]
+    lastmodified: "2023-02-13T14:44:15Z"
+    mac: ENC[AES256_GCM,data:UKDySEgOBTTk3vdkrKMT5iyQTCyi75OH3PyJM7nk6w2P64GbfYm19L0Jm99/MJpMLUa7rBOGOkJOl41AeTVUXrMHccppswuM4gM9wgGxyfb+bzZriZNbI8pQnBo/IcEb5wO3v3OApdry9GqldCQWLLLdhv+D0mGWqpg0fW599f4=,iv:W0y0Id5UtXrZiEPUMaWqpzvbuSpdlDxCEbmGKckx8zY=,tag:ohhekkDHi1dGs3PtzovGuw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
