--- a/cluster/apps/miniflux/miniflux-secrets.sops.yaml
+++ b/cluster/apps/miniflux/miniflux-secrets.sops.yaml
@@ -5,9 +5,11 @@ metadata:
     name: miniflux-secrets
     namespace: miniflux
 stringData:
-    username: ENC[AES256_GCM,data:W8F4GZhZEm8MEHJvvQ==,iv:pYsqcBGoxZcJZAkAN4oJvxy6fqZ5X4ENgtlrAPneYVU=,tag:nvQlEx4kWf+MPpu6y0sVNg==,type:str]
-    password: ENC[AES256_GCM,data:3pO4qpivIHCUXTEReGjFzZ0F7S/yJxYH,iv:6AcPxFhFt3H0dGjGokp2GaZ3SlgO/4YtCqdSkkDfSq8=,tag:Uzh6cT+eBSUkIojm8GVZkg==,type:str]
-    base_url: ENC[AES256_GCM,data:vx56fRnY7LQqsHQNw3qsTGajFl4iwSst,iv:J0wgwNcGl31AKovR6ORV3Kx1uxSNQvCe48Z76tEVZHQ=,tag:vtJoogRLUXA0lVAmM/i98w==,type:str]
+    username: ENC[AES256_GCM,data:oEzI3ZR/tGCE+1Bw4A==,iv:4KKSykBnC50XlQik1oU8VxPfTHfQBqV7eA38Po69ZoA=,tag:2UlocObg+S3T7JtRnjz8BA==,type:str]
+    password: ENC[AES256_GCM,data:ZVx1dM1aXqtNzKnbQgIy5cbcN5adCn48,iv:ev+nM/VJSGsahPncMcXiNLFsmLr/lZqBOeZeGVaDjTQ=,tag:pb+c97XY2v7CRePbVQ8ELQ==,type:str]
+    base_url: ENC[AES256_GCM,data:FKBsVoRiiwdh6VfFx4ejMwJ0dseVL22t,iv:1Esx73NFC7yeXTNtipCM7ggIQ2v0tiwUcMvDlLzM6oU=,tag:gVs2XX8WlP3iiLHJF44Rnw==,type:str]
+    postgres_password: ENC[AES256_GCM,data:wqPibD3zcMH4phNjAXObMLL5TZbaWVk=,iv:Ih1WbTqPWRWjpeNpKMVsZH7C1x48aENbeaUYr/p+a0M=,tag:GuI0RVSWxbr6lBHYpShBCw==,type:str]
+    database_url: ENC[AES256_GCM,data:DerU2ypCV2Y2WAuNem3bRiqIB6rM7M/ULUEglMe8/n39ZockKkHsS0SAcJM/+u3OzphAYWKTupam2ffhD90DxZ/UpoNLhwaOuiOWvmqMy4ZEHQrALD9K/g==,iv:UNcKgiu2wz84hApJorZ6APG4Amc/FpDnqMrQE1+i474=,tag:U5w+Wym85KF6y64cGy6Eiw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +19,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1NmRxOE5TMTNMb056VmJh
-            dXN1SmtucllnVk03TCsreEhQaVMwRVVIQXljCllySkRYVU9LWmRhMENRd2IwWmpX
-            WnhFQzFQRkZ1dzhBWjhyTU1XMmNwaVUKLS0tIE1TRU5aWU9hY0JsRCtjTUJRVkcv
-            cWF3VEdCQmZYcTVjTENtdlRkT3ROcTgKMIATp/ExN8iAgGBcq6Sz87tJhAgVFRD5
-            asflVlXlrwVj2fjGSmxN4bHxhRCmKqGQD+NTeUDmeIPRWgJWmim2XA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvL0dnTmwvZFpkaUlJMlJL
+            SlkxMVlOREtVQURRNkV4ZTlRTm91WEc3Y0ZZCnVyekp1cG9NR3FDMjhlQTl6ZVJL
+            eTdzb1R2Nk5DV1BsVkErYkhRSWU2UWcKLS0tIFJkRjRFaFp5YlBmeDRPSXQ0aXkx
+            TGxlS0V6Z3l3RlZKekNETm5RNFFVemMKYy3OiQ/4ZH2ByNLHr0VwC/ZNVoOeZakS
+            MTirz2G5u43PEe2qHJLTUbCtop3WKxjx1qIiKLciGiPlwbGMGE8cWQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T14:44:15Z"
-    mac: ENC[AES256_GCM,data:UKDySEgOBTTk3vdkrKMT5iyQTCyi75OH3PyJM7nk6w2P64GbfYm19L0Jm99/MJpMLUa7rBOGOkJOl41AeTVUXrMHccppswuM4gM9wgGxyfb+bzZriZNbI8pQnBo/IcEb5wO3v3OApdry9GqldCQWLLLdhv+D0mGWqpg0fW599f4=,iv:W0y0Id5UtXrZiEPUMaWqpzvbuSpdlDxCEbmGKckx8zY=,tag:ohhekkDHi1dGs3PtzovGuw==,type:str]
+    lastmodified: "2023-02-13T14:50:31Z"
+    mac: ENC[AES256_GCM,data:ciEqInjMBCFhMYka51RNyCdSz+nariE5EKdpmDNzfprsABat6PCBJgWUAmLPQBSJPl595cX5z8AmDjdMt64/LGFnrsk5KqtSr674KmuATFKbPPPwv/EVB7eTr7wXssGlCUw49Sz/kPwPPMAZ8IIImp17Py2A09GAan8a+NfPo/g=,iv:qphDmFC9Rs/H0BnSmBfgSTd42yHHw43WyusPd8adKJA=,tag:3EroSJLgqkXO+/9OyW8y3A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
