--- a/cluster/apps/miniflux/sts-postgresql.yaml
+++ b/cluster/apps/miniflux/sts-postgresql.yaml
@@ -34,7 +34,7 @@ spec:
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              key: postgres-password
+              key: postgres_password
               name: miniflux-secrets
         - name: POSTGRES_DB
           value: miniflux
