--- a/cluster/base/flux-system/charts/helm/mondoo-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/mondoo-charts.yaml
@@ -6,11 +6,12 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
-  url: https://github.com/mondoohq/mondoo-operator
-  ref:
-    branch: main
-  ignore: |
-    # exclude all
-    /*
-    # include charts directory
-    !/charts/
+  url: https://mondoohq.github.io/mondoo-operator
+  timeout: 3m
+  # ref:
+  #   branch: main
+  # ignore: |
+  #   # exclude all
+  #   /*
+  #   # include charts directory
+  #   !/charts/
