Fix wrong kind for HR repo

--- a/cluster/base/flux-system/charts/helm/mondoo-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/mondoo-charts.yaml
@@ -1,18 +1,10 @@
 ---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: GitRepository
+kind: HelmRepository
 metadata:
   name: mondoo-operator
   namespace: flux-system
 spec:
   interval: 1m
   url: https://mondoohq.github.io/mondoo-operator
-  #url: https://github.com/mondoohq/mondoo-operator
   timeout: 3m
-  # ref:
-  #   branch: main
-  # ignore: |
-  #   # exclude all
-  #   /*
-  #   # include charts directory
-  #   !/charts/
