Fix wrong reference for helm release

--- a/cluster/apps/mondoo-operator/mondoo-operator/helm-release.yaml
+++ b/cluster/apps/mondoo-operator/mondoo-operator/helm-release.yaml
@@ -11,8 +11,8 @@ spec:
       chart: mondoo-operator
       version: 1.11.1
       sourceRef:
-        kind: GitRepository
-        name: mondoo-operator
+        kind: HelmRepository
+        name: mondoo-operator-charts
         namespace: flux-system
       interval: 5m
   values:
