--- a/cluster/base/flux-system/charts/helm/mondoo-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/mondoo-charts.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: mondoo-operator
+  name: mondoo-operator-charts
   namespace: flux-system
 spec:
   interval: 1m
