Disable mondoo-operator

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - flux-system
   - kube-system
   - miniflux
-  - mondoo-operator
+#  - mondoo-operator
   - monitoring
   - networking
   - pihole
