Add app to hajimari

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -44,6 +44,10 @@ spec:
               url: 'https://app.renovatebot.com/dashboard#github/nliakm/k3s-rpi-gitops'
               icon: 'mdi:format-paint'
               info: Renavotate Dashboard
+            - name: Mondoo
+              url: 'https://console.mondoo.com'
+              icon: 'mdi:security'
+              info: Mondoo Dashboard
       globalBookmarks:
         group: Tech
         bookmarks:
