--- a/cluster/apps/hajimari/hajimari/helm-release.yaml
+++ b/cluster/apps/hajimari/hajimari/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: hajimari
-  namespace: default
+  namespace: hajimari
 spec:
   interval: 5m
   chart:
@@ -83,6 +83,6 @@ spec:
     resources:
       requests:
         cpu: 100m
-        memory: 128Mi
+        memory: 64Mi
       limits:
-        memory: 256Mi
+        memory: 128Mi
