Disable dashboard cm

--- a/cluster/apps/monitoring/grafana/dashboards/kustomization.yaml
+++ b/cluster/apps/monitoring/grafana/dashboards/kustomization.yaml
@@ -3,4 +3,4 @@ kind: Kustomization
 resources:
   - hydroponics-dashboard-cm.yaml
   - nas-dashboard-cm.yaml
-  - pihole-dashboard-cm.yaml
+#  - pihole-dashboard-cm.yaml
