--- a/cluster/apps/default/tandoorrecipes/sts-postgresql.yaml
+++ b/cluster/apps/default/tandoorrecipes/sts-postgresql.yaml
@@ -67,8 +67,11 @@ spec:
           timeoutSeconds: 5
         resources:
           requests:
-            cpu: 250m
-            memory: 256Mi
+            cpu: 100m
+            memory: 32Mi
+          limits:
+            cpu: 200m
+            memory: 64Mi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
